Kubernetes/blue-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-deploy
spec:
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: nginx-blue
        image: fabricioveronez/bluehome
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    app: blue
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
