Kubernetes/green-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-deploy
spec:
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - name: nginx-green
        image: fabricioveronez/greenhome
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: green
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
