Kubernetes/ingress-subdiretorio.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: subdiretorio
spec:
  rules:
  - host: veronez.net
    http:
      paths:
      - path: /blue
        backend:
          serviceName: blue-service
          servicePort: 80       
      - path: /green
        backend:
          serviceName: green-service
          servicePort: 80
